cleanup meter/register
