# lib/buzzn/resources/meter/base_resource.rb
@@ -5,16 +5,22 @@ module Meter
 
     model Base
 
-    attributes  :manufacturer_product_name,
-                :manufacturer_product_serialnumber,
-                :metering_type,
-                :meter_size,
-                :ownership,
-                :direction_label,
-                :build_year
+    attributes :product_name,
+               :product_serialnumber,
+               :ownership,
+               :build_year,
+               :calibrated_until,
+               :edifact_metering_type,
+               :edifact_meter_size,
+               :edifact_section,
+               :edifact_tariff,
+               :edifact_measurement_method,
+               :edifact_mounting_method,
+               :edifact_meter_size,
+               :edifact_voltage_level,
+               :edifact_cycle_interval
 
     attributes :updatable, :deletable
 
-    def direction_label; object.direction; end
   end
 end
